// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/input/demo/Addon.js correctly test 1`] = `
<div>
  <div
    style="margin-bottom:16px"
  >
    <span
      class="jc-input-group-wrapper"
    >
      <span
        class="jc-input-wrapper jc-input-group"
      >
        <span
          class="jc-input-group-addon"
        >
           Http:// 
        </span>
        <input
          class="jc-input"
          type="text"
          value="mysite"
        />
        <span
          class="jc-input-group-addon"
        >
           .com 
        </span>
      </span>
    </span>
  </div>
  <div
    style="margin-bottom:16px"
  >
    <span
      class="jc-input-group-wrapper"
    >
      <span
        class="jc-input-wrapper jc-input-group"
      >
        <span
          class="jc-input-group-addon"
        >
           
          <div
            class="jc-select jc-select-enabled"
            style="width:90px"
          >
            <div
              aria-autocomplete="list"
              aria-expanded="false"
              aria-haspopup="true"
              class="jc-select-selection
            jc-select-selection--single"
              role="combobox"
              tabindex="0"
            >
              <div
                class="jc-select-selection__rendered"
              >
                <div
                  class="jc-select-selection-selected-value"
                  style="display:block;opacity:1"
                  title="Http://"
                >
                  Http://
                </div>
              </div>
              <span
                class="jc-select-arrow"
                style="user-select:none;-webkit-user-select:none"
                unselectable="unselectable"
              >
                <b />
              </span>
            </div>
          </div>
           
        </span>
        <input
          class="jc-input"
          type="text"
          value="mysite"
        />
        <span
          class="jc-input-group-addon"
        >
           
          <div
            class="jc-select jc-select-enabled"
            style="width:80px"
          >
            <div
              aria-autocomplete="list"
              aria-expanded="false"
              aria-haspopup="true"
              class="jc-select-selection
            jc-select-selection--single"
              role="combobox"
              tabindex="0"
            >
              <div
                class="jc-select-selection__rendered"
              >
                <div
                  class="jc-select-selection-selected-value"
                  style="display:block;opacity:1"
                  title=".com"
                >
                  .com
                </div>
              </div>
              <span
                class="jc-select-arrow"
                style="user-select:none;-webkit-user-select:none"
                unselectable="unselectable"
              >
                <b />
              </span>
            </div>
          </div>
           
        </span>
      </span>
    </span>
  </div>
  <div
    style="margin-bottom:16px"
  >
    <span
      class="jc-input-group-wrapper"
    >
      <span
        class="jc-input-wrapper jc-input-group"
      >
        <input
          class="jc-input"
          type="text"
          value="mysite"
        />
        <span
          class="jc-input-group-addon"
        >
           
          <i
            class="jcicon jcicon-setting "
          />
           
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`renders ./components/input/demo/Autosize-textarea.js correctly test 1`] = `
<div>
  <textarea
    class="jc-input"
    placeholder="Autosize height based on content lines"
  />
  <div
    style="margin:24px 0"
  />
  <textarea
    class="jc-input"
    placeholder="Autosize height with minimum and maximum number of lines"
  />
</div>
`;

exports[`renders ./components/input/demo/Basic.js correctly test 1`] = `
<input
  class="jc-input"
  placeholder="Basic usage"
  type="text"
/>
`;

exports[`renders ./components/input/demo/Group.js correctly test 1`] = `
<div>
  <span
    class="jc-input-group jc-input-group-lg"
  >
    <div
      class="jc-col-5"
    >
      <input
        class="jc-input"
        type="text"
        value="0571"
      />
    </div>
    <div
      class="jc-col-8"
    >
      <input
        class="jc-input"
        type="text"
        value="26888888"
      />
    </div>
  </span>
  <br />
  <span
    class="jc-input-group jc-input-group-compact"
  >
    <input
      class="jc-input"
      style="width:20%"
      type="text"
      value="0571"
    />
    <input
      class="jc-input"
      style="width:30%"
      type="text"
      value="26888888"
    />
  </span>
  <br />
  <span
    class="jc-input-group jc-input-group-compact"
  >
    <div
      class="jc-select jc-select-enabled"
    >
      <div
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="true"
        class="jc-select-selection
            jc-select-selection--single"
        role="combobox"
        tabindex="0"
      >
        <div
          class="jc-select-selection__rendered"
        >
          <div
            class="jc-select-selection-selected-value"
            style="display:block;opacity:1"
            title="Zhejiang"
          >
            Zhejiang
          </div>
        </div>
        <span
          class="jc-select-arrow"
          style="user-select:none;-webkit-user-select:none"
          unselectable="unselectable"
        >
          <b />
        </span>
      </div>
    </div>
    <input
      class="jc-input"
      style="width:50%"
      type="text"
      value="Xihu District, Hangzhou"
    />
  </span>
  <br />
  <span
    class="jc-input-group jc-input-group-compact"
  >
    <div
      class="jc-select jc-select-enabled"
    >
      <div
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="true"
        class="jc-select-selection
            jc-select-selection--single"
        role="combobox"
        tabindex="0"
      >
        <div
          class="jc-select-selection__rendered"
        >
          <div
            class="jc-select-selection-selected-value"
            style="display:block;opacity:1"
            title="Option1"
          >
            Option1
          </div>
        </div>
        <span
          class="jc-select-arrow"
          style="user-select:none;-webkit-user-select:none"
          unselectable="unselectable"
        >
          <b />
        </span>
      </div>
    </div>
    <input
      class="jc-input"
      style="width:50%"
      type="text"
      value="input content"
    />
    <div
      class="jc-input-number"
    >
      <div
        class="jc-input-number-handler-wrap"
      >
        <span
          aria-disabled="false"
          aria-label="Increase Value"
          class="jc-input-number-handler jc-input-number-handler-up "
          role="button"
          unselectable="unselectable"
        >
          <span
            class="jc-input-number-handler-up-inner"
            unselectable="unselectable"
          />
        </span>
        <span
          aria-disabled="false"
          aria-label="Decrease Value"
          class="jc-input-number-handler jc-input-number-handler-down "
          role="button"
          unselectable="unselectable"
        >
          <span
            class="jc-input-number-handler-down-inner"
            unselectable="unselectable"
          />
        </span>
      </div>
      <div
        aria-valuemin="-9007199254740991"
        class="jc-input-number-input-wrap"
        role="spinbutton"
      >
        <input
          autocomplete="off"
          class="jc-input-number-input"
          min="-9007199254740991"
          step="1"
          value=""
        />
      </div>
    </div>
  </span>
  <br />
  <span
    class="jc-input-group jc-input-group-compact"
  >
    <input
      class="jc-input"
      style="width:50%"
      type="text"
      value="input content"
    />
    <span
      class="jc-calendar-picker"
    >
      <div>
        <input
          class="jc-calendar-picker-input jc-input"
          placeholder="Select date"
          readonly=""
          value=""
        />
        <span
          class="jc-calendar-picker-icon"
        />
      </div>
    </span>
  </span>
  <br />
  <span
    class="jc-input-group jc-input-group-compact"
  >
    <div
      class="jc-select jc-select-enabled"
    >
      <div
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="true"
        class="jc-select-selection
            jc-select-selection--single"
        role="combobox"
        tabindex="0"
      >
        <div
          class="jc-select-selection__rendered"
        >
          <div
            class="jc-select-selection-selected-value"
            style="display:block;opacity:1"
            title="Option1-1"
          >
            Option1-1
          </div>
        </div>
        <span
          class="jc-select-arrow"
          style="user-select:none;-webkit-user-select:none"
          unselectable="unselectable"
        >
          <b />
        </span>
      </div>
    </div>
    <div
      class="jc-select jc-select-enabled"
    >
      <div
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="true"
        class="jc-select-selection
            jc-select-selection--single"
        role="combobox"
        tabindex="0"
      >
        <div
          class="jc-select-selection__rendered"
        >
          <div
            class="jc-select-selection-selected-value"
            style="display:block;opacity:1"
            title="Option2-2"
          >
            Option2-2
          </div>
        </div>
        <span
          class="jc-select-arrow"
          style="user-select:none;-webkit-user-select:none"
          unselectable="unselectable"
        >
          <b />
        </span>
      </div>
    </div>
  </span>
  <br />
  <span
    class="jc-input-group jc-input-group-compact"
  >
    <div
      class="jc-select jc-select-enabled"
    >
      <div
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="true"
        class="jc-select-selection
            jc-select-selection--single"
        role="combobox"
        tabindex="0"
      >
        <div
          class="jc-select-selection__rendered"
        >
          <div
            class="jc-select-selection-selected-value"
            style="display:block;opacity:1"
            title="Between"
          >
            Between
          </div>
        </div>
        <span
          class="jc-select-arrow"
          style="user-select:none;-webkit-user-select:none"
          unselectable="unselectable"
        >
          <b />
        </span>
      </div>
    </div>
    <input
      class="jc-input"
      placeholder="Minimum"
      style="width:100px;text-align:center"
      type="text"
    />
    <input
      class="jc-input jc-input-disabled"
      disabled=""
      placeholder="~"
      style="width:30px;border-left:0;pointer-events:none;background-color:#fff"
      type="text"
    />
    <input
      class="jc-input"
      placeholder="Maximum"
      style="width:100px;text-align:center;border-left:0"
      type="text"
    />
  </span>
  <br />
  <span
    class="jc-input-group jc-input-group-compact"
  >
    <div
      class="jc-select jc-select-enabled"
    >
      <div
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="true"
        class="jc-select-selection
            jc-select-selection--single"
        role="combobox"
        tabindex="0"
      >
        <div
          class="jc-select-selection__rendered"
        >
          <div
            class="jc-select-selection-selected-value"
            style="display:block;opacity:1"
            title="Sign Up"
          >
            Sign Up
          </div>
        </div>
        <span
          class="jc-select-arrow"
          style="user-select:none;-webkit-user-select:none"
          unselectable="unselectable"
        >
          <b />
        </span>
      </div>
    </div>
    <div
      class="jc-select-show-search jc-select-auto-complete jc-select jc-select-combobox jc-select-enabled"
      style="width:200px"
    >
      <div
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="true"
        class="jc-select-selection
            jc-select-selection--single"
        role="combobox"
      >
        <div
          class="jc-select-selection__rendered"
        >
          <div
            class="jc-select-selection__placeholder"
            style="display:block;user-select:none;-webkit-user-select:none"
            unselectable="unselectable"
          >
            Email
          </div>
          <ul>
            <li
              class="jc-select-search jc-select-search--inline"
            >
              <div
                class="jc-select-search__field__wrap"
              >
                <input
                  class="jc-input jc-select-search__field"
                  type="text"
                  value=""
                />
                <span
                  class="jc-select-search__field__mirror"
                >
                   
                </span>
              </div>
            </li>
          </ul>
        </div>
        <span
          class="jc-select-arrow"
          style="user-select:none;-webkit-user-select:none"
          unselectable="unselectable"
        >
          <b />
        </span>
      </div>
    </div>
  </span>
  <br />
  <span
    class="jc-input-group jc-input-group-compact"
  >
    <div
      class="jc-select jc-select-enabled"
      style="width:30%"
    >
      <div
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="true"
        class="jc-select-selection
            jc-select-selection--single"
        role="combobox"
        tabindex="0"
      >
        <div
          class="jc-select-selection__rendered"
        >
          <div
            class="jc-select-selection-selected-value"
            style="display:block;opacity:1"
            title="Home"
          >
            Home
          </div>
        </div>
        <span
          class="jc-select-arrow"
          style="user-select:none;-webkit-user-select:none"
          unselectable="unselectable"
        >
          <b />
        </span>
      </div>
    </div>
    <span
      class="jc-cascader-picker"
      style="width:70%"
      tabindex="0"
    >
      <span
        class="jc-cascader-picker-label"
      />
      <input
        autocomplete="off"
        class="jc-input jc-cascader-input "
        placeholder="Select Address"
        readonly=""
        type="text"
        value=""
      />
      <i
        class="jcicon jcicon-down  jc-cascader-picker-arrow"
      />
    </span>
  </span>
</div>
`;

exports[`renders ./components/input/demo/Presuffix.js correctly test 1`] = `
<span
  class="jc-input-affix-wrapper"
>
  <span
    class="jc-input-prefix"
  >
     
    <i
      class="jcicon jcicon-user "
      style="color:rgba(0,0,0,.25)"
    />
     
  </span>
  <input
    class="jc-input"
    placeholder="Enter your username"
    type="text"
    value=""
  />
</span>
`;

exports[`renders ./components/input/demo/Search-input.js correctly test 1`] = `
<div>
  <span
    class="jc-input-search jc-input-affix-wrapper"
    style="width:200px"
  >
    <input
      class="jc-input"
      placeholder="input search text"
      type="text"
    />
    <span
      class="jc-input-suffix"
    >
       
      <i
        class="jcicon jcicon-search  jc-input-search-icon"
      />
       
    </span>
  </span>
  <br />
  <br />
  <span
    class="jc-input-search jc-input-search-enter-button jc-input-affix-wrapper"
  >
    <input
      class="jc-input"
      placeholder="input search text"
      type="text"
    />
    <span
      class="jc-input-suffix"
    >
       
      <button
        class="jc-btn jc-input-search-button jc-btn-primary"
        type="button"
      >
        <i
          class="jcicon jcicon-search "
        />
      </button>
       
    </span>
  </span>
  <br />
  <br />
  <span
    class="jc-input-search jc-input-search-enter-button jc-input-search-large jc-input-affix-wrapper jc-input-affix-wrapper-lg"
  >
    <input
      class="jc-input jc-input-lg"
      placeholder="input search text"
      type="text"
    />
    <span
      class="jc-input-suffix"
    >
       
      <button
        class="jc-btn jc-input-search-button jc-btn-primary jc-btn-lg"
        type="button"
      >
        <span>
          Search
        </span>
      </button>
       
    </span>
  </span>
</div>
`;

exports[`renders ./components/input/demo/Size.js correctly test 1`] = `
<div
  class="example-input"
>
  <input
    class="jc-input jc-input-lg"
    placeholder="large size"
    type="text"
  />
  <input
    class="jc-input"
    placeholder="default size"
    type="text"
  />
  <input
    class="jc-input jc-input-sm"
    placeholder="small size"
    type="text"
  />
</div>
`;

exports[`renders ./components/input/demo/Textarea.js correctly test 1`] = `
<textarea
  class="jc-input"
  rows="4"
/>
`;

exports[`renders ./components/input/demo/Tooltip.js correctly test 1`] = `
<input
  class="jc-input"
  maxlength="25"
  placeholder="Input a number"
  style="width:120px"
  type="text"
  value=""
/>
`;
